[project]
name = "georeference"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.2.5",
    "pillow>=11.2.1",
    "pyqt6>=6.9.0",
    "requests>=2.32.3",
    "requests-cache>=1.2.1",
    "scikit-image>=0.25.2",
]
